# lags_selector

./: README.md  lags_selection_poc.ipynb  pyproject.toml
src/: lags_selection.py  logs.py  plot_tools.py  subsets.py
test/: test_Subsets.py
